src/objects/InternalData__c.object
<CustomObject>
    <description>This object is used for WRF-POLK.</description>
    <fields>
        <fullName>ExpectedOutputQuanity__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Expected Output Quanity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalDataType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>For External Data, see the Input File Section</inlineHelpText>
        <label>Internal Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TotalSource</fullName>
                </value>
                <value>
                    <fullName>Unified</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>TLAS Query</fullName>
                </value>
                <value>
                    <fullName>Other Input</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManufacturerDivision__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Manufacturer/Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingSpecifications__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Processing Specifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Internal Data</relationshipLabel>
        <relationshipName>InternalData</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Internal Data</label>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Internal Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>